@@ -21,6 +21,7 @@
 
 package io.crate.analyze;
 
+import com.google.common.collect.ImmutableList;
 import com.google.common.collect.Sets;
 import io.crate.analyze.expressions.ExpressionToStringVisitor;
 import io.crate.metadata.settings.CrateSettings;
@@ -31,9 +32,7 @@ import org.elasticsearch.common.logging.ESLogger;
 import org.elasticsearch.common.logging.Loggers;
 import org.elasticsearch.common.settings.ImmutableSettings;
 
-import java.util.List;
-import java.util.Locale;
-import java.util.Set;
+import java.util.*;
 
 @Singleton
 public class SetStatementAnalyzer extends DefaultTraversalVisitor<SetAnalyzedStatement, Analysis> {
@@ -53,11 +52,15 @@ public class SetStatementAnalyzer extends DefaultTraversalVisitor<SetAnalyzedSta
         for (Assignment assignment : node.assignments()) {
             String settingsName = ExpressionToStringVisitor.convert(assignment.columnName(),
                     analysis.parameterContext().parameters());
+
             SettingsApplier settingsApplier = CrateSettings.getSetting(settingsName);
             if (settingsApplier == null) {
                 throw new IllegalArgumentException(String.format(Locale.ENGLISH, "setting '%s' not supported", settingsName));
             }
-            checkIfSettingIsRuntime(settingsName);
+            for (String setting : ExpressionToSettingNameListVisitor.convert(assignment)) {
+                checkIfSettingIsRuntime(setting);
+            }
+
             settingsApplier.apply(builder, analysis.parameterContext().parameters(), assignment.expression());
         }
         statement.settings(builder.build());
@@ -76,6 +79,9 @@ public class SetStatementAnalyzer extends DefaultTraversalVisitor<SetAnalyzedSta
                 if (settingNames.size() == 0) {
                     throw new IllegalArgumentException(String.format(Locale.ENGLISH, "setting '%s' not supported", settingsName));
                 }
+                for (String setting : settingNames) {
+                    checkIfSettingIsRuntime(setting);
+                }
                 settingsToRemove.addAll(settingNames);
                 logger.info("resetting [{}]", settingNames);
             }
@@ -92,9 +98,54 @@ public class SetStatementAnalyzer extends DefaultTraversalVisitor<SetAnalyzedSta
         for (Setting<?, ?> setting : settings) {
             if (setting.settingName().equals(name) && !setting.isRuntime()) {
                 throw new UnsupportedOperationException(String.format(Locale.ENGLISH,
-                        "setting '%s' cannot be set/reset in runtime", name));
+                        "setting '%s' cannot be set/reset at runtime", name));
             }
             checkIfSettingIsRuntime(setting.children(), name);
+        }
+    }
+
+    private static class ExpressionToSettingNameListVisitor extends AstVisitor<Collection<String>, String> {
+
+        private static final ExpressionToSettingNameListVisitor INSTANCE = new ExpressionToSettingNameListVisitor();
+        private ExpressionToSettingNameListVisitor() {}
+
+        public static Collection<String> convert(Node node) {
+            return INSTANCE.process(node, null);
+        }
+
+        @Override
+        public Collection<String> visitAssignment(Assignment node, String context) {
+            String left = ExpressionToStringVisitor.convert(node.columnName(), null);
+            return node.expression().accept(this, left);
+        }
+
+        @Override
+        public Collection<String> visitObjectLiteral(ObjectLiteral node, String context) {
+            Collection<String> settingNames = new ArrayList<>();
+            for (Map.Entry<String, Expression> entry : node.values().entries()) {
+                String s = String.format("%s.%s", context, entry.getKey());
+                if (entry.getValue() instanceof ObjectLiteral) {
+                    settingNames.addAll(entry.getValue().accept(this, s));
+                } else {
+                    settingNames.add(s);
+                }
+            }
+            return settingNames;
+        }
+
+        @Override
+        protected Collection<String> visitLiteral(Literal node, String context) {
+            return ImmutableList.of(context);
+        }
+
+        @Override
+        public Collection<String> visitParameterExpression(ParameterExpression node, String context) {
+            return ImmutableList.of(context);
+        }
+
+        @Override
+        protected Collection<String> visitNode(Node node, String context) {
+            return ImmutableList.of(context);
         }
     }
 
