@@ -5,6 +5,8 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix check if setting is settable/resettable on runtime for nested settings
+
  - Fixed a race condition that could cause the re-creation of an already
    existing table partition and therefore potential dataloss when creating
    a lot of partitions simultaniously using COPY FROM or bulk inserts.
